--- a/src/styles/components/map.scss
+++ b/src/styles/components/map.scss
@@ -1,83 +1,39 @@
+#sudoku-game-container {
+  width: 100%;
+  height: 100%;
+}
 
-// #game-wrapper {
-//   display: flex;
-//   width: 1000px;
-//   height: 500px;
-//   margin: 0 auto;
-// }
-// #map {
-//   width: 100%;
-//   height: 100%;
-// }
-// #map-wrapper {
-//   background-color: #FFF;
-//   width: 100%;
-//   max-height: 500px;
-//   min-height: 250px;
-//   max-width: 500px;
-//   min-width: 250px;
-// }
-// #map-wrapper:after {
-//   content: "";
-//   display: block;
-//   padding-bottom: 100%;
-// }
-// #map-table:after {
-//   display: block;
-//   box-sizing: border-box;
-// }
-// #map-table {
-//   width: 100%;
-//   height: 100%;
-//   margin: 0 auto;
-//   padding: 0;
-//   border: 2px solid #344861;
-//   border-collapse: collapse;
-// }
-// .map-row {
-//   height: 11.1111%;
-// }
-// .map-row, .map-table tbody:after {
-//   -webkit-box-sizing: border-box;
-//   -moz-box-sizing: border-box;
-//   box-sizing: border-box;
-//   width: 100%;
-// }
-// .square, .map-row {
-//   display: flex;
-//   padding: 0;
-//   margin: 0;
-// }
+#sudoku-map-wrapper {
+  width: 50%;
+  height: 100%;
+}
 
-// #controls {
-//   width: 100%;
-//   max-width: 500px;
-//   min-width: 200px;
-//   margin-left: 20px;
-//   transition: opacity .3s ease-in-out;
-// }
+#sudoku-map {
+  height: 100%;
+  width: 100%;
+  border: 2px solid black;
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(9, 1fr);
+}
 
-// nav {
-//   display: -webkit-box;
-//   display: -webkit-flex;
-//   display: -moz-box;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -webkit-box-orient: vertical;
-//   -webkit-box-direction: normal;
-//   -webkit-flex-direction: column;
-//   -moz-box-orient: vertical;
-//   -moz-box-direction: normal;
-//   -ms-flex-direction: column;
-//   flex-direction: column;
-//   -webkit-flex-wrap: nowrap;
-//   -ms-flex-wrap: nowrap;
-//   flex-wrap: nowrap;
-//   height: 100%;
-//   width: 100%;
-// }
-// .numpad-wrapper {
-//   -webkit-box-flex: 1;
-//   -moz-box-flex: 1;
-//   position: relative;
-// }
+.square {
+  border: 1px solid lightgray;
+
+  // TODO: Temporary solution
+  &:nth-child(3n) {
+    border-right: 2px solid black;
+  }
+
+  &:nth-child(9n) {
+    border-right: 0px;
+  }
+
+  &:nth-child(n+19):nth-child(-n+27) {
+    border-bottom: 2px solid black;
+  }
+
+  &:nth-child(n+46):nth-child(-n+54) {
+    border-bottom: 2px solid black;
+  }
+}
