--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,19 @@
 @import './basics/normilize';
 
 @import './components/map';
+
+#app {
+  width: 100vw;
+  height: 100vh;
+}
+
+header {
+  text-align: center;
+  width: 100%;
+}
+
+#container {
+  width: 80%;
+  height: 80%;
+  margin: 50px auto 0;
+}
